--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -116,7 +116,8 @@
                                     <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                            <!-- <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." /> -->
+                            <img class="img-fluid" src="{{ url_for('static', filename='images/portfolio-1.jpg') }}" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -127,7 +128,7 @@
                                     <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="{{ url_for('static', filename='images/portfolio-2.jpg') }}" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -138,7 +139,7 @@
                                     <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="{{ url_for('static', filename='images/portfolio-3.jpg') }}" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -149,7 +150,7 @@
                                     <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="{{ url_for('static', filename='images/portfolio-4.jpg') }}" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -191,6 +192,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- <script src="js/scripts.js"></script> -->
+        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
     </body>
 </html>
