setup de rotas e páginas no navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Stylish Portfolio - Start Bootstrap Template</title>
+        <title>Veritas</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -22,12 +22,12 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
+                <li class="sidebar-brand"><a href="#page-top">Veritas</a></li>
                 <li class="sidebar-nav-item"><a href="{{ url_for('home') }}">Home</a></li>
-                <li class="sidebar-nav-item"><a href="{{ url_for('about') }}">About</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-                <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-nav-item"><a href="{{ url_for('conta') }}">Conta</a></li>
+                <li class="sidebar-nav-item"><a href="{{ url_for('sobre') }}">Sobre nós</a></li>
+                <li class="sidebar-nav-item"><a href="{{ url_for('factosg') }}">Factos Guardados</a></li>
+                <li class="sidebar-nav-item"><a href="{{ url_for('factosen') }}">Enviar Factos</a></li>
             </ul>
         </nav>
         
