--- a/app/templates/factosg.html
+++ b/app/templates/factosg.html
@@ -4,9 +4,9 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">About</h1>
-                <h3 class="mb-5"><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <h1 class="mb-1">Factos Guardados</h1>
+                <h3 class="mb-5"><em>Factos que o utilizador guardou</em></h3>
+                <a class="btn btn-primary btn-xl" href="#factosg">Find Out More</a>
             </div>
         </header>
         <!-- About-->
