Link para redes sociais

--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -82,8 +82,8 @@
                 <h5 class="card-title">Francisco Costa</h5>
                 <p class="card-text">Explorador de curiosidades e observador ágil.</p>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/inesduarte" target="_blank"><i class="bi bi-instagram"></i></a>
-                    <a href="https://linkedin.com/in/inesduarte" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.instagram.com/franciscoo_costa_/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/francisco-cotrim-costa-7a4b8a2a9/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
                 </div>
             </div>
