--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
 
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
-                <ul class="list-inline mb-5">
+                <!-- <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
                     </li>
@@ -48,8 +48,8 @@
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
                     </li>
-                </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Your Website 2023</p>
+                </ul> -->
+                <p class="text-muted small mb-0">Copyright &copy; Veritas 2025</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
