--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -101,13 +101,13 @@
         </div>
         </div>
 
-        <!-- Bootstrap Icons CDN (necessário para os ícones das redes sociais) -->
+        <!-- Bootstrap Icons CDN (necessário para os ícones das redes sociais)
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <-- Bootstrap JS -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         </body>
-        </html>
+        </html> --> 
 
 
 
