fix: sobre conflict

--- a/app/templates/sobre.html
+++ b/app/templates/sobre.html
@@ -62,13 +62,13 @@
             <!-- Criador 1 -->
             <div class="col-md-4 mb-4">
             <div class="card creator-card shadow-sm p-3">
-                <img src="img/creator1.jpg" class="card-img-top rounded-circle w-50 mx-auto mt-3" alt="Criador 1">
+                <!-- <img src="img/creator1.jpg" class="card-img-top rounded-circle w-50 mx-auto mt-3" alt="Criador 1"> -->
                 <div class="card-body">
                 <h5 class="card-title">Rodrigo Santos</h5>
                 <p class="card-text">Mente curiosa e adora mergulhar em tópicos aleatórios.</p>
                 <div class="social-icons">
-                    <a href="https://twitter.com/joaosilva" target="_blank"><i class="bi bi-twitter"></i></a>
-                    <a href="https://github.com/joaosilva" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://x.com/imrodrigo31" target="_blank"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.instagram.com/rodrigomds31/" target="_blank"><i class="bi bi-instagram"></i></a>
                 </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <!-- Criador 2 -->
             <div class="col-md-4 mb-4">
             <div class="card creator-card shadow-sm p-3">
-                <img src="img/creator2.jpg" class="card-img-top rounded-circle w-50 mx-auto mt-3" alt="Criador 2">
+                <!-- <img src="img/creator2.jpg" class="card-img-top rounded-circle w-50 mx-auto mt-3" alt="Criador 2"> -->
                 <div class="card-body">
                 <h5 class="card-title">Francisco Costa</h5>
                 <p class="card-text">Explorador de curiosidades e observador ágil.</p>
