--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,5 +59,6 @@
         <!-- Core theme JS-->
         <!-- <script src="js/scripts.js"></script> -->
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     </body>
 </html>
